samples/_failures_safe/1761627149_b40929_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da7755a4.c: In function ‘main’:
./samples/SAFE/__tmp_da7755a4.c:153:5: error: expected expression at end of input
  153 |     if (input_len >
      |     ^~
./samples/SAFE/__tmp_da7755a4.c:153:5: error: expected declaration or statement at end of input
